--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foraldrakollen",
+  "name": "parental-compensation-control",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
