--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "parental-compensation-control",
   "version": "0.1.0",
   "private": true,
+  "husky": {
+    "hooks": {
+      "pre-push": "CI=true yarn test"
+    }
+  },
   "dependencies": {
     "@sentry/browser": "^5.10.2",
     "@types/jest": "24.0.25",
-    "@types/node": "13.1.1",
+    "@types/node": "13.1.2",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
+    "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
@@ -36,6 +42,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^4.1.19"
+    "@types/styled-components": "^4.1.19",
+    "husky": "^3.1.0"
   }
 }
