--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.4.1",
     "typescript": "3.7.4"
   },
@@ -43,6 +46,10 @@
   },
   "devDependencies": {
     "@types/styled-components": "^4.1.19",
-    "husky": "^3.1.0"
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.3",
+    "husky": "^3.1.0",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
