add gh-pages to deploy to github

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
     "axios": "^0.19.0",
+    "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -23,11 +24,20 @@
     "styled-components": "^4.4.1",
     "typescript": "3.7.4"
   },
+  "devDependencies": {
+    "@types/styled-components": "^4.1.19",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.3",
+    "husky": "^3.1.0",
+    "redux-devtools-extension": "^2.13.8"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -43,13 +53,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/styled-components": "^4.1.19",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.3",
-    "husky": "^3.1.0",
-    "redux-devtools-extension": "^2.13.8"
   }
 }
