--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "parental-compensation-control",
   "version": "0.1.0",
   "private": true,
+  "author": "Youssef Moti from Dynabyte AB",
+  "repository": "",
   "husky": {
     "hooks": {
       "pre-push": "CI=true yarn test"
@@ -13,6 +15,7 @@
     "@types/node": "13.1.2",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
+    "@types/react-redux": "^7.1.5",
     "axios": "^0.19.0",
     "gh-pages": "^2.1.1",
     "react": "^16.12.0",
