--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "@types/jest": "24.0.25",
     "@types/node": "13.1.2",
     "@types/react": "16.9.17",
+    "@types/react-dates": "^17.1.7",
     "@types/react-dom": "16.9.4",
     "@types/react-redux": "^7.1.5",
     "axios": "^0.19.0",
     "gh-pages": "^2.1.1",
+    "moment": "^2.24.0",
+    "polished": "^3.4.2",
     "react": "^16.12.0",
+    "react-dates": "^21.5.1",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
