--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.12.0",
     "react-dates": "^21.5.1",
     "react-dom": "^16.12.0",
+    "react-input-slider": "^5.1.4",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
