--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "styled-components": "^4.4.1",
     "typescript": "3.7.4"
   },
