Change name of project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parental-compensation-control",
+  "name": "parental-compensation",
   "version": "0.1.0",
   "private": true,
   "author": "Youssef Moti from Dynabyte AB",
