add github homepage

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://youssef103.github.io/parental/",
   "name": "parental-compensation",
   "version": "0.1.0",
   "private": true,
