--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -15,26 +15,29 @@ on:
     branches: [master]
 
 jobs:
-  test:
+  deploy:
     runs-on: ${{ matrix.os }} # runs a test on Ubuntu, Windows and macOS
 
     strategy:
       matrix:
-        node_version: [14]
-        os: [macOS-latest, windows-latest, ubuntu-latest]
-
+        node_version: [15.x]
+        os: [ubuntu-latest]
+          
     steps:
       - uses: actions/checkout@v1
-      - name: Use Node.js ${{ matrix.node_version }}
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node_version: ${{ matrix.node_version }}
+          node-version: ${{ matrix.node-version }}
           
-      - name: build
-        run: |
-          yarn install
-          npm run build
-          
-      - name: Deploy to Githup
-        run: |
-          npm run deploy
+      - name: Install Packages
+        run: npm install
+        
+      - name: Build page
+        run: npm run build
+        
+      - name: Deploy to gh-pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          publish_dir: ./build
