--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           
     steps:
       - name: Checkout repository
-      - uses: actions/checkout@v1
+        uses: actions/checkout@v1
       
       - name: Set up Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
