--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,23 +12,23 @@ jobs:
 
     strategy:
       matrix:
-        node_version: [15.x]
+        node_version: [15]
         os: [ubuntu-latest]
           
     steps:
-      - name: Checkout repository
+      - name: Checkout repository ⚙
         uses: actions/checkout@v1
       
-      - name: Set up Node.js ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
           
-      - name: Install Packages
+      - name: Install Packages 📦📦📦
         run: npm install
         
-      - name: Build page
+      - name: Build page 🎉
         run: npm run build
         
-      - name: Deploy to gh-pages
+      - name: Deploy to gh-pages 👏
         run: npm run deploy
