--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,10 @@ jobs:
         run: npm install
         
       - name: Deploy to gh-pages 🎉
-        run: npm run deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.PERSONAL_TOKEN }}
+          publish_dir: ./public
         
       - name: Updating Domain 
         run: echo "Update domain.....👏🎉🎉🎉👏"
