--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install Packages 📦📦📦
         run: npm install
         
+      - name: Build app 🏛
+        run : npm run build
+        
       - name: Deploy to gh-pages 🎉
         uses: peaceiris/actions-gh-pages@v3
         with:
