--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,9 +35,14 @@ jobs:
        
         
       - name: Deploy to gh-pages 🎉
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          personal_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
+        run: |
+          git config --global user.email "youssefmoti@yahoo.com"
+          git config --global user.name "youssef103"
+          git remote set-url origin https://${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}@github.com/youssef103/gh-page.git
+          npm run deploy
+        #uses: peaceiris/actions-gh-pages@v3
+        #with:
+        #  personal_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
         
       - name: Updating Domain 
         run: echo "Update domain.....👏🎉🎉🎉👏"
