--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install Packages 📦📦📦
         run: yarn install
         
-      - name: Build app 🏛
+      - name: Build app 🚀
         run : yarn run build
         
       - name: Deploy to gh-pages 🎉
@@ -41,4 +41,6 @@ jobs:
         #  personal_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
         
       - name: Updating Domain 
-        run: echo "Update domain.....👏🎉🎉🎉👏"
+        run: |
+          echo "Update domain.....👏🎉🎉🎉👏"
+          echo "Go to the page: https://youssef103.github.io/parental/"
